--- a/vue/dvtemp/package.json
+++ b/vue/dvtemp/package.json
@@ -30,6 +30,7 @@
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
+    "url-loader": "^4.1.0",
     "vue-cli-plugin-axios": "0.0.4",
     "vue-template-compiler": "^2.6.11"
   },
